--- a/Grades/Podfile
+++ b/Grades/Podfile
@@ -1,14 +1,21 @@
-# Uncomment the next line to define a global platform for your project
-platform :ios, '11.0'
+# Comment the next line if you don't want to use dynamic frameworks
+use_frameworks!
+
+def shared_pods
+  pod 'RealmSwift'
+end
 
 target 'Grades' do
-  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
-  use_frameworks!
-
+  platform :ios, '11.0'
   # Pods for Grades
-  pod 'RealmSwift'
+  shared_pods
   pod 'JTAppleCalendar'
   pod 'IQKeyboardManagerSwift'
   pod 'SwiftMessages'
+end
 
+target 'GradesWatch Extension' do
+  platform :watchos, '5.3'
+  # Pods for GradesWatch Extension
+  shared_pods
 end
